# MastersThesis_clean

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.MD  compile.bat
Control/: CMakeLists.txt
Control/RobotControl/: CMakeLists.txt
Control/RobotControl/include/RobotControl/: Controller.h  Encoder.h  Logger.h  LoopRate.h  MotionQueue.h  Navigation.h  Path.h  Plan.h  PlanExecutor.h  Position.h  Servo.h  SimpleMotion.h  Utility.h  VirtualServo.h  config.h  geometry.h  gyro.h
Control/RobotControl/src/: Controller.cpp  Logger.cpp  MotionQueue.cpp  Navigation.cpp  Path.cpp  Plan.cpp  PlanExecutor.cpp  Position.cpp  Servo.cpp  SimpleMotion.cpp  VirtualServo.cpp  fuzzy_system.h
Control/RobotControl/test/: CMakeLists.txt  encoder_tests.cpp  geometry_tests.cpp  utility_tests.cpp
Control/SimpleControl/: CMakeLists.txt
Control/SimpleControl/src/: main.cpp  measurement.h
Control/libs/SerialPortWrapper/include/SerialPortWrapper/: SerialPortWrapper.h
Control/libs/SerialPortWrapper/src/: SerialPortWrapper.cpp
Control/libs/fuzzylite/: CMakeLists.txt
Control/libs/fuzzylite/include/fl/: Benchmark.h  Complexity.h  Console.h  Engine.h  Exception.h  Operation.h  fuzzylite.h
Control/libs/fuzzylite/include/fl/activation/: Activation.h  First.h  General.h  Highest.h  Last.h  Lowest.h  Proportional.h  Threshold.h
Control/libs/fuzzylite/include/fl/defuzzifier/: Bisector.h  Centroid.h  Defuzzifier.h  IntegralDefuzzifier.h  LargestOfMaximum.h  MeanOfMaximum.h  SmallestOfMaximum.h  WeightedAverage.h  WeightedAverageCustom.h  WeightedDefuzzifier.h  WeightedSum.h  WeightedSumCustom.h
Control/libs/fuzzylite/include/fl/factory/: ActivationFactory.h  CloningFactory.h  ConstructionFactory.h  DefuzzifierFactory.h  FactoryManager.h  FunctionFactory.h  HedgeFactory.h  SNormFactory.h  TNormFactory.h  TermFactory.h
Control/libs/fuzzylite/include/fl/hedge/: Any.h  Extremely.h  Hedge.h  HedgeFunction.h  Not.h  Seldom.h  Somewhat.h  Very.h
Control/libs/fuzzylite/include/fl/imex/: CppExporter.h  Exporter.h  FclExporter.h  FclImporter.h  FisExporter.h  FisImporter.h  FldExporter.h  FllExporter.h  FllImporter.h  Importer.h  JavaExporter.h  RScriptExporter.h
Control/libs/fuzzylite/include/fl/norm/: Norm.h  SNorm.h  TNorm.h
Control/libs/fuzzylite/include/fl/norm/s/: AlgebraicSum.h  BoundedSum.h  DrasticSum.h  EinsteinSum.h  HamacherSum.h  Maximum.h  NilpotentMaximum.h  NormalizedSum.h  SNormFunction.h  UnboundedSum.h
Control/libs/fuzzylite/include/fl/norm/t/: Minimum.h  (+7 more)
Control/libs/fuzzylite/include/fl/rule/: Antecedent.h  Consequent.h  Expression.h  Rule.h  RuleBlock.h
Control/libs/fuzzylite/include/fl/term/: Activated.h  Aggregated.h  Bell.h  Binary.h  Concave.h  Constant.h  Cosine.h  Discrete.h  Function.h  Gaussian.h  GaussianProduct.h  Linear.h  PiShape.h  Ramp.h  Rectangle.h  SShape.h  Sigmoid.h  SigmoidDifference.h  SigmoidProduct.h  Spike.h  Term.h  Trapezoid.h  Triangle.h  ZShape.h
Control/libs/fuzzylite/include/fl/variable/: InputVariable.h  OutputVariable.h  Variable.h
Control/libs/vec2/: CMakeLists.txt
Control/libs/vec2/include/vec2/: vec2.h
Control/libs/vec2/test/: test_vec2.cpp
(+8 files in other folders)
